--- a/client/src/components/layout/sidebar/sidebar.module.css
+++ b/client/src/components/layout/sidebar/sidebar.module.css
@@ -7,15 +7,16 @@
 
 
 .image {
-  width: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 12px;
 }
 
 .name{
-    font-size: 24px;
-    color: white;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .list {
@@ -37,4 +38,11 @@
   position: absolute;
   top: 500px;
   border-radius: 100px;
+}
+
+.weight{
+  font-weight: bold;
+}
+.card{
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
