--- a/client/src/pages/home/home.module.css
+++ b/client/src/pages/home/home.module.css
@@ -1,39 +1,48 @@
-.container {
-  padding: 80px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container{
+  padding: 20px;
+}
+.cards {
+  padding: 60px;
+}
+h1{
+  margin:20px 0 0 250px;
+  font-family: 'Courier New', Courier, monospace;
 }
 .card {
+  width: 60%;
   padding: 40px;
   position: relative;
+  margin: auto;
   margin-bottom: 80px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
-/* .card:hover {
-  transform: scale(1.03);
-  box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12),
-    0 8px 32px -8px hsla(0, 0%, 0%, 0.14),
-    0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
-} */
-img {
+.main_img_container {
   width: 100%;
+  margin-top: 20px;
+}
+.main_img {
+  width: 100%;
+  object-fit: contain;
+  height: 300px;
 }
 
-.profile {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  
-}
 header {
   display: flex;
+  margin-bottom: 20px;
 }
 footer {
   padding-top: 5px;
 }
-h1 {
+.user_info {
   font-family: "Gotham Pro";
-  font-size: 25px;
   vertical-align: middle;
-  color: #181818;
-  /* margin: 0; */
-  margin: 20px 0 0 15px;
+  margin: 10px 0 0 15px;
+}
+p{
+  font-size: 13px;
 }
