--- a/client/src/components/layout/sidebar/sidebar.module.css
+++ b/client/src/components/layout/sidebar/sidebar.module.css
@@ -11,7 +11,8 @@
   height: 80px;
   border-radius: 50%;
   object-fit: cover;
-  margin-right: 12px;
+  margin:auto;
+  margin-bottom: 10px;
 }
 
 .name{
