senua-feat: mobile design changed by me

--- a/client/src/components/layout/sidebar/sidebar.module.css
+++ b/client/src/components/layout/sidebar/sidebar.module.css
@@ -11,11 +11,11 @@
   height: 80px;
   border-radius: 50%;
   object-fit: cover;
-  margin:auto;
+  margin: auto;
   margin-bottom: 10px;
 }
 
-.name{
+.name {
   font-size: 18px;
   font-weight: bold;
 }
@@ -41,9 +41,10 @@
   border-radius: 100px;
 }
 
-.weight{
+.weight {
   font-weight: bold;
 }
-.card{
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+
+.card {
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
