--- a/client/src/pages/home/home.module.css
+++ b/client/src/pages/home/home.module.css
@@ -3,36 +3,43 @@
   padding: 0;
   box-sizing: border-box;
 }
-.container{
+
+.container {
   padding: 20px;
 }
 
 .cards {
   padding: 60px;
 }
-.titleDiv{
-  /* background-color: grey; */
-text-align: center;
+
+.titleDiv {
+  text-align: center;
 }
-h2{
-  margin:20px 0 0 0px;
+
+h2 {
+  margin: 20px 0 0 0px;
   font-family: cursive;
 }
+
 .card {
   width: 80%;
   padding: 40px;
   position: relative;
   margin: auto;
+  margin-top: 15px;
   margin-bottom: 80px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
-.cardTablet{
+
+.cardTablet {
   /* background-color: black; */
 }
+
 .main_img_container {
   width: 100%;
   margin-top: 20px;
 }
+
 .main_img {
   width: 100%;
   object-fit: contain;
@@ -43,15 +50,18 @@ header {
   display: flex;
   margin-bottom: 20px;
 }
+
 footer {
   padding-top: 5px;
 }
+
 .user_info {
   font-family: "Gotham Pro";
   vertical-align: middle;
   margin: 10px 0 0 15px;
 }
-p{
+
+p {
   font-size: 13px;
 }
 
